@@ -12,6 +12,7 @@ Version 0.05:
 * Fixed navigation bar in IE >= 7.0
 * Made IE < 5.5 working in OldNetscape mode
 * OldNetscape mode will not show navigation bar
+* Make bookmarklet work with non-Unicode pages
 + Add cookie-based submenu show/hide memory
 + Add [Bookmark This!] bookmarklet (fixed '&' problem in 20070814, and '#' problem later)
 + Add view protected site password short time memorization. (1 hour)
